# todobutbetterv2

./: README.md  maker.bat  modules.bat  monkeytype.sqlite3  package-lock.json  package.json  pusher.bat  pyproject.toml  requirements.txt  start-back.bat  wsgi.py
backend/: __init__.py  libs.py  models.py
backend/API/: auth_api.py  authapi.py  crud_api.py  login.py
backend/database/: fluantt.sqbpro  todobutbetter.sqbpro  todobutbetter.sqlite3
frontend/: package-lock.json  package.json  start-front.bat  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  index.css  index.js  tokenFetcher.js  tokenFetcher.ts
frontend/src/AUTH/: login.tsx  register.tsx
frontend/src/CRUD/: createTodo.js  createTodo.tsx  getUsersComponent.js  getUsersComponent.tsx  list_components.js  navbarComponent.js  navbarComponent.tsx  showAll.js  showAll.tsx
frontend/src/auth/: index.js  login.js  register.js
migrations/versions/: 1b3abd678990_initial_migration.py  58792b22ea8f_new_migration.py  9958ed7b1195_.py
