[tool.poetry]
name = "todobutbetterv2"
version = "0.2.1"
description = "A better developed TODO-list application for actual useage, a modern day trello for lightweight todo with shareability and modern accents."
authors = ["Rohaan Ahmed"]
license = "creative commons attribution noderivs cc by-nd"

[tool.poetry.dependencies]
python = "^3.10"
Flask-Admin = "^1.6.0"
Flask-Mail = "^0.9.1"

[tool.poetry.dev-dependencies]
Flask = "^2.1.1"
Flask-Cors = "^3.0.10"
Flask-JWT-Extended = "^4.3.1"
Flask-Login = "^0.6.0"
flask-praetorian = "^1.3.0"
sql = "^2022.4.0"
Flask-SQLAlchemy = "^2.5.1"
pylint-werkzeug = "^0.1"
black = "^22.3.0"
pytest = "^7.1.1"
isort = "^5.10.1"
beartype = "^0.10.4"
portray = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
